// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integration works for example attributes-custom correctly 1`] = `
Object {
  "client.ts": "/*eslint-disable*/
import type { CQRS } from \\"./cqrsClient\\";
import {} from \\"./types\\";
export default function (cqrsClient: CQRS) {
    return {};
}
",
  "types.ts": "/*eslint-disable*/
export type Query<TResult> = {};
export type Command = {};
export type Operation<TResult> = {};
/**
 * @attribute CustomAttribute
 */
export interface Dto {
}
",
}
`;

exports[`integration works for example attributes-obsolete correctly 1`] = `
Object {
  "client.ts": "/*eslint-disable*/
import type { CQRS } from \\"./cqrsClient\\";
import { A } from \\"./types\\";
export default function (cqrsClient: CQRS) {
    return {
        A: cqrsClient.createCommand<A, {}>(\\"A\\", {})
    };
}
",
  "types.ts": "/*eslint-disable*/
export type Query<TResult> = {};
export type Command = {};
export type Operation<TResult> = {};
/**
 * @deprecated
 */
export interface A extends Command {
}
",
}
`;

exports[`integration works for example attributes-property correctly 1`] = `
Object {
  "client.ts": "/*eslint-disable*/
import type { CQRS } from \\"./cqrsClient\\";
import { A } from \\"./types\\";
export default function (cqrsClient: CQRS) {
    return {
        A: cqrsClient.createCommand<A, {}>(\\"A\\", {})
    };
}
",
  "types.ts": "/*eslint-disable*/
export type Query<TResult> = {};
export type Command = {};
export type Operation<TResult> = {};
export interface A extends Command {
    /**
     * @deprecated
     */
    Prop: string;
}
",
}
`;

exports[`integration works for example attributes-unauthorized correctly 1`] = `
Object {
  "client.ts": "/*eslint-disable*/
import type { CQRS } from \\"./cqrsClient\\";
import { A } from \\"./types\\";
export default function (cqrsClient: CQRS) {
    return {
        A: cqrsClient.createCommand<A, {}>(\\"A\\", {})
    };
}
",
  "types.ts": "/*eslint-disable*/
export type Query<TResult> = {};
export type Command = {};
export type Operation<TResult> = {};
/**
 * @attribute LeanCode.Contracts.Security.AllowUnauthorizedAttribute
 */
export interface A extends Command {
}
",
}
`;

exports[`integration works for example project-aggregated-combined correctly 1`] = `
Object {
  "client.ts": "/*eslint-disable*/
import type { CQRS } from \\"./cqrsClient\\";
import { A, B } from \\"./types\\";
export default function (cqrsClient: CQRS) {
    return {
        A: {
            Command: cqrsClient.createCommand<A.Command, {}>(\\"A.Command\\", {})
        },
        B: {
            Query: cqrsClient.createQuery<B.Query, number>(\\"B.Query\\")
        }
    };
}
",
  "types.ts": "/*eslint-disable*/
export type Query<TResult> = {};
export type Command = {};
export type Operation<TResult> = {};
export namespace A {
    /**
     * @attribute LeanCode.Contracts.Security.AllowUnauthorizedAttribute
     */
    export interface Command extends Command {
    }
}
export namespace B {
    /**
     * @attribute LeanCode.Contracts.Security.AllowUnauthorizedAttribute
     */
    export interface Query extends Query<number> {
    }
}
",
}
`;

exports[`integration works for example project-aggregated-multiple correctly 1`] = `
Object {
  "client.ts": "/*eslint-disable*/
import type { CQRS } from \\"./cqrsClient\\";
import { A, B } from \\"./types\\";
export default function (cqrsClient: CQRS) {
    return {
        A: {
            Command: cqrsClient.createCommand<A.Command, {}>(\\"A.Command\\", {})
        },
        B: {
            Query: cqrsClient.createQuery<B.Query, number>(\\"B.Query\\")
        }
    };
}
",
  "types.ts": "/*eslint-disable*/
export type Query<TResult> = {};
export type Command = {};
export type Operation<TResult> = {};
export namespace A {
    /**
     * @attribute LeanCode.Contracts.Security.AllowUnauthorizedAttribute
     */
    export interface Command extends Command {
    }
}
export namespace B {
    /**
     * @attribute LeanCode.Contracts.Security.AllowUnauthorizedAttribute
     */
    export interface Query extends Query<number> {
    }
}
",
}
`;

exports[`integration works for example project-embedded correctly 1`] = `
Object {
  "client.ts": "/*eslint-disable*/
import type { CQRS } from \\"./cqrsClient\\";
import {} from \\"./types\\";
export default function (cqrsClient: CQRS) {
    return {};
}
",
  "types.ts": "/*eslint-disable*/
export type Query<TResult> = {};
export type Command = {};
export type Operation<TResult> = {};
export namespace Embedded {
    export interface DTO {
    }
}
",
}
`;

exports[`integration works for example project-globs correctly 1`] = `
Object {
  "client.ts": "/*eslint-disable*/
import type { CQRS } from \\"./cqrsClient\\";
import {} from \\"./types\\";
export default function (cqrsClient: CQRS) {
    return {};
}
",
  "types.ts": "/*eslint-disable*/
export type Query<TResult> = {};
export type Command = {};
export type Operation<TResult> = {};
",
}
`;

exports[`integration works for example project-implicitusings correctly 1`] = `
Object {
  "client.ts": "/*eslint-disable*/
import type { CQRS } from \\"./cqrsClient\\";
import {} from \\"./types\\";
export default function (cqrsClient: CQRS) {
    return {};
}
",
  "types.ts": "/*eslint-disable*/
export type Query<TResult> = {};
export type Command = {};
export type Operation<TResult> = {};
export namespace ImplicitUsings {
    export interface DTO {
        Id: string;
    }
}
",
}
`;

exports[`integration works for example project-packagereference correctly 1`] = `
Object {
  "client.ts": "/*eslint-disable*/
import type { CQRS } from \\"./cqrsClient\\";
import {} from \\"./types\\";
export default function (cqrsClient: CQRS) {
    return {};
}
",
  "types.ts": "/*eslint-disable*/
export type Query<TResult> = {};
export type Command = {};
export type Operation<TResult> = {};
export namespace PackageReference {
    export interface OrderDTO {
        Id: number;
    }
}
",
}
`;

exports[`integration works for example project-referencetoembedded correctly 1`] = `
Object {
  "client.ts": "/*eslint-disable*/
import type { CQRS } from \\"./cqrsClient\\";
import {} from \\"./types\\";
export default function (cqrsClient: CQRS) {
    return {};
}
",
  "types.ts": "/*eslint-disable*/
export type Query<TResult> = {};
export type Command = {};
export type Operation<TResult> = {};
",
}
`;

exports[`integration works for example project-single correctly 1`] = `
Object {
  "client.ts": "/*eslint-disable*/
import type { CQRS } from \\"./cqrsClient\\";
import { Single } from \\"./types\\";
export default function (cqrsClient: CQRS) {
    return {
        Single: {
            Command: cqrsClient.createCommand<Single.Command, {}>(\\"Single.Command\\", {})
        }
    };
}
",
  "types.ts": "/*eslint-disable*/
export type Query<TResult> = {};
export type Command = {};
export type Operation<TResult> = {};
export namespace Single {
    /**
     * @attribute LeanCode.Contracts.Security.AllowUnauthorizedAttribute
     */
    export interface Command extends Command {
    }
}
",
}
`;

exports[`integration works for example properties-binary correctly 1`] = `
Object {
  "client.ts": "/*eslint-disable*/
import type { CQRS } from \\"./cqrsClient\\";
import {} from \\"./types\\";
export default function (cqrsClient: CQRS) {
    return {};
}
",
  "types.ts": "/*eslint-disable*/
export type Query<TResult> = {};
export type Command = {};
export type Operation<TResult> = {};
export interface Dto {
    A: string;
    B?: string;
    C: string[];
    D: Record<string, string>;
}
",
}
`;

exports[`integration works for example properties-composite_types correctly 1`] = `
Object {
  "client.ts": "/*eslint-disable*/
import type { CQRS } from \\"./cqrsClient\\";
import {} from \\"./types\\";
export default function (cqrsClient: CQRS) {
    return {};
}
",
  "types.ts": "/*eslint-disable*/
export type Query<TResult> = {};
export type Command = {};
export type Operation<TResult> = {};
export interface Dto {
    A: number[];
    B: number[];
    C: number[];
    D: number[];
    E: Record<number, string>;
    F: Record<number, string>;
    G: Record<number, string>;
}
",
}
`;

exports[`integration works for example properties-known_types correctly 1`] = `
Object {
  "client.ts": "/*eslint-disable*/
import type { CQRS } from \\"./cqrsClient\\";
import {} from \\"./types\\";
export default function (cqrsClient: CQRS) {
    return {};
}
",
  "types.ts": "/*eslint-disable*/
import type { CommandResult } from \\"@leancode/cqrs-client-base\\";
export type Query<TResult> = {};
export type Command = {};
export type Operation<TResult> = {};
export interface Dto {
    A: number;
    B: number;
    C: string;
    D: boolean;
    E: string;
    F: string;
    G: string;
    H: string;
    I: string;
    J: string;
    K: string;
    L: string;
    M: number;
    N: number;
    O: string;
    P: CommandResult<any>;
}
",
}
`;

exports[`integration works for example properties-known_types-custom_types correctly 1`] = `
Object {
  "client.ts": "/*eslint-disable*/
import type { CQRS } from \\"./cqrsClient\\";
import type DateTimeOffset from \\"@leancode/api-date-datefns\\";
import type TimeOnly, { DateOnly, timeSpanImpl as TimeSpan } from \\"@leancode/api-date-dayjs\\";
import {} from \\"./types\\";
export default function (cqrsClient: CQRS) {
    return {};
}
",
  "types.ts": "/*eslint-disable*/
import type { CommandResult } from \\"@leancode/cqrs-client-base\\";
import type DateTimeOffset from \\"@leancode/api-date-datefns\\";
import type TimeOnly, { DateOnly, timeSpanImpl as TimeSpan } from \\"@leancode/api-date-dayjs\\";
export type Query<TResult> = {};
export type Command = {};
export type Operation<TResult> = {};
export interface Dto {
    A: number;
    B: number;
    C: string;
    D: boolean;
    E: string;
    F: DateOnly;
    G: TimeOnly;
    H: string;
    I: string;
    J: string;
    K: DateTimeOffset;
    L: string;
    M: number;
    N: number;
    O: TimeSpan;
    P: CommandResult<any>;
}
",
}
`;

exports[`integration works for example simple correctly 1`] = `
Object {
  "client.ts": "/*eslint-disable*/
import type { CQRS } from \\"./cqrsClient\\";
import { Command, Operation, Query, Query1, Query2 } from \\"./types\\";
export default function (cqrsClient: CQRS) {
    return {
        Command: cqrsClient.createCommand<Command, {}>(\\"Command\\", {}),
        Operation: cqrsClient.createOperation<Operation, number>(\\"Operation\\"),
        Query: cqrsClient.createQuery<Query, number>(\\"Query\\"),
        Query1: cqrsClient.createQuery<Query1, number>(\\"Query1\\"),
        Query2: cqrsClient.createQuery<Query2, number>(\\"Query2\\")
    };
}
",
  "types.ts": "/*eslint-disable*/
export type Query<TResult> = {};
export type Command = {};
export type Operation<TResult> = {};
export interface A {
    PropA: number;
}
export interface B {
    PropB: number;
}
export interface C extends A, B {
    PropC: number;
}
export interface Command extends Command {
}
export interface DTO {
}
export interface Operation extends Operation<number> {
    Arg: string;
}
export interface Query extends Query<number> {
}
/**
 * Test comment.
 */
export interface Query1 extends Query<number> {
}
export interface Query2 extends Query<number> {
}
export enum SimpleEnum {
    A = 0,
    B = 1,
    C = 10
}
",
}
`;

exports[`integration works for example supported_use_cases-exclusions correctly 1`] = `
Object {
  "client.ts": "/*eslint-disable*/
import type { CQRS } from \\"./cqrsClient\\";
import {} from \\"./types\\";
export default function (cqrsClient: CQRS) {
    return {};
}
",
  "types.ts": "/*eslint-disable*/
export type Query<TResult> = {};
export type Command = {};
export type Operation<TResult> = {};
export namespace Exclusions {
    export interface IncludedDTO {
        IncludedProperty: number;
    }
}
",
}
`;

exports[`integration works for example supported_use_cases-same_names correctly 1`] = `
Object {
  "client.ts": "/*eslint-disable*/
import type { CQRS } from \\"./cqrsClient\\";
import { First, Second } from \\"./types\\";
export default function (cqrsClient: CQRS) {
    return {
        First: {
            Command: cqrsClient.createCommand<First.Command, {}>(\\"First.Command\\", {}),
            Query: cqrsClient.createQuery<First.Query, number>(\\"First.Query\\")
        },
        Second: {
            Command: cqrsClient.createCommand<Second.Command, {}>(\\"Second.Command\\", {}),
            Query: cqrsClient.createQuery<Second.Query, number>(\\"Second.Query\\")
        }
    };
}
",
  "types.ts": "/*eslint-disable*/
export type Query<TResult> = {};
export type Command = {};
export type Operation<TResult> = {};
export namespace First {
    export interface Command extends Command {
    }
    export interface DTO {
    }
    export interface Query extends Query<number> {
    }
}
export namespace Second {
    export interface Command extends Command {
    }
    export interface DTO {
    }
    export interface Query extends Query<number> {
    }
}
",
}
`;

exports[`integration works for example supported_use_cases-shared_error_codes correctly 1`] = `
Object {
  "client.ts": "/*eslint-disable*/
import type { CQRS } from \\"./cqrsClient\\";
import { Command } from \\"./types\\";
export default function (cqrsClient: CQRS) {
    return {
        Command: cqrsClient.createCommand<Command, Command.ErrorCodes>(\\"Command\\", Command.ErrorCodes)
    };
}
",
  "types.ts": "/*eslint-disable*/
export type Query<TResult> = {};
export type Command = {};
export type Operation<TResult> = {};
export interface Command extends Command {
    NeededDTO: DTO;
}
export namespace Command {
    export const ErrorCodes = {
        CommandSpecificError: 1,
        DtoRelatedError: 1000
    } as const;
    export type ErrorCodes = typeof ErrorCodes;
}
export interface DTO {
}
",
}
`;
